onboard-you-backend/lambdas/api/src/engine/snapshots/config_api__engine__validation_engine__tests__bad_action_config_empty_columns.snap
---
source: onboard-you-backend/lambdas/api/src/engine/validation_engine.rs
expression: output
---
ERR Validation: Step 'ingest' (csv_hris_connector): Configuration error: CsvHrisConnector requires at least one declared column
