onboard-you-backend/lambdas/api/src/engine/snapshots/config_api__engine__validation_engine__tests__bearer_schema_column_missing.snap
---
source: onboard-you-backend/lambdas/api/src/engine/validation_engine.rs
expression: output
---
ERR Validation: 
Egress validation failed: column 'missing_col' required by API dispatcher config is not produced by the pipeline
