onboard-you-backend/lambdas/api/src/engine/snapshots/config_api__engine__validation_engine__tests__default_config_no_settings.snap
---
source: onboard-you-backend/lambdas/api/src/engine/validation_engine.rs
expression: output
---
ERR Validation: No API dispatcher settings configured — go to Settings to set up a default auth method
