onboard-you-backend/lambdas/api/src/engine/snapshots/config_api__engine__validation_engine__tests__default_config_settings_also_default.snap
---
source: onboard-you-backend/lambdas/api/src/engine/validation_engine.rs
expression: output
---
ERR Validation: Egress validation failed: Settings has default auth instead of a well defined one
