onboard-you-backend/lambdas/api/src/engine/snapshots/config_api__engine__validation_engine__tests__default_resolved_to_bearer_missing_column.snap
---
source: onboard-you-backend/lambdas/api/src/engine/validation_engine.rs
expression: output
---
ERR Validation: API Dispatcher requires columns not produced by the pipeline: not_here
