onboard-you-backend/lambdas/api/src/engine/snapshots/config_api__engine__validation_engine__tests__egress_skipped_when_no_org_id.snap
---
source: onboard-you-backend/lambdas/api/src/engine/validation_engine.rs
expression: output
---
{
  "steps": [
    {
      "action_id": "ingest",
      "action_type": "csv_hris_connector",
      "columns_after": [
        "x"
      ]
    }
  ],
  "final_columns": [
    "x"
  ]
}
