onboard-you-backend/lambdas/api/src/engine/snapshots/config_api__engine__validation_engine__tests__empty_manifest.snap
---
source: onboard-you-backend/lambdas/api/src/engine/validation_engine.rs
expression: output
---
{
  "steps": [],
  "final_columns": []
}
