onboard-you-backend/lambdas/api/src/engine/snapshots/config_api__engine__validation_engine__tests__last_action_not_dispatcher.snap
---
source: onboard-you-backend/lambdas/api/src/engine/validation_engine.rs
expression: output
---
ERR Validation: Last step must be an API Dispatcher, found 'csv_hris_connector'
